# TechnoAesthetics

./: README.md
Server_SpringBoot/: pom.xml
Server_SpringBoot/src/main/java/org/example/server_springboot/: ServerSpringBootApplication.java
Server_SpringBoot/src/main/java/org/example/server_springboot/configuration/: WebSecurityConfig.java  WebSocketConfig.java
Server_SpringBoot/src/main/java/org/example/server_springboot/repository/: FriendRepository.java  MessageRepository.java  UserGroupMappingRepository.java  UserRepository.java  ValidationCodeRepository.java
Server_SpringBoot/src/main/java/org/example/server_springboot/service/: CodeService.java  CustomUserDetailsService.java  EmailService.java  FriendService.java  MessageService.java  PasswordService.java  SpeechSynthesisService.java  UserService.java
Server_SpringBoot/src/main/java/org/example/server_springboot/util/: AuthV3Util.java  AuthV4Util.java  HttpUtil.java  JwtAuthenticationFilter.java  (+1 more)
Server_SpringBoot/src/main/resources/: application.properties
Server_SpringBoot/src/test/java/org/example/server_springboot/: ServerSpringBootApplicationTests.java
TechnoAesthetics/: CMakeLists.txt  CMakeLists.txt.user.104f6ad  CMakeLists.txt.user.81b416b  DatabaseManager.h.LHhnSY  TechnoAesthetics.qmlproject  TechnoAesthetics.qmlproject.qtds  TechnoAesthetics.qmlproject.qtds.3564a49  TechnoAesthetics.qmlproject.qtds.9c4b053  qmlmodules
TechnoAesthetics/content/: App.qml.XpSmXf  App.qml.rcyoFm  App.qml.zXDyXl  CMakeLists.txt  Screen02.qml.PNUkJy  Screen02.qml.PvfLsV
TechnoAesthetics/content/components/: HomeView.qml  TContactView.qml  TMessageView.qml  TSettingItem.qml  TSettingsDetails.qml
TechnoAesthetics/imports/: CMakeLists.txt
TechnoAesthetics/imports/TechnoAesthetics/: CMakeLists.txt  qmldir
TechnoAesthetics/imports/TechnoAesthetics/designer/: plugin.metainfo
TechnoAesthetics/src/: ChatClient.hpp  FileManager.cpp  FileManager.h  ImageProcessor.cpp  ImageProcessor.h  NetworkManager.cpp  NetworkManager.h  SignalListener.hpp  SpeechSynthesis.hpp  TaskBase.hpp  ThreadPool.hpp  import_qml_plugins.h  main.cpp
Techno_AI/: SparkApi.py  SparkPythondemo.py  gunicorn_conf.py  uwsgi.ini
(+18 files in other folders)
